[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetheron-sentinel-l3"
version = "0.1.0"
description = "Autonomous Interceptor prototype for liquidity-drain detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Aetheron"}]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
